--- a/style.css
+++ b/style.css
@@ -493,11 +493,10 @@ section.sec8 img {
 
 
 
-
+/*
 @keyframes scroll-x {
   0% {
     transform: translate(0, 0);
-    transform:scale(1);
 }
 
 80% {
@@ -508,4 +507,4 @@ section.sec8 img {
   transform: translate(-100px,0);
 }
 
-}
+}*/
